[tool.poetry]
name = "kfooty"
version = "0.1.0"
description = "Track Korean overseas football schedules"
authors = ["Jeesang Kim <jeenowden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
icalendar = "^5.0.11"
requests = "^2.31.0"
gunicorn = "^21.2.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
